--- a/WebService/app/src/main/res/layout/activity_main.xml
+++ b/WebService/app/src/main/res/layout/activity_main.xml
@@ -41,8 +41,8 @@
 
     <TextView
         android:id="@+id/resultado"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_weight="1" />
 
 
